fixing up searchbox styling to make it more visible

--- a/wp-content/themes/sho_child/css/main.css
+++ b/wp-content/themes/sho_child/css/main.css
@@ -106,4 +106,5 @@ img.gym_side_image{
     border:none;
     border-radius:5px;
     font-size:1.2em;
+    border: 1px solid #B9B8B8;
 }
